kubernetes/apps/network/omada-controller/app/httproute.yaml
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: omada-controller
    app.kubernetes.io/name: omada-controller
  name: omada-controller
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/name: Omada Controller
    gethomepage.dev/icon: https://raw.githubusercontent.com/chaijunkin/dashboard-icons/main/png/omada.png
spec:
  hostnames:
    - omada.cloudjur.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: omada-controller
          port: 8043
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
